k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scp
  labels:
    name: scp
    app.kubernetes.io/name: secure-context-protocol
    app.kubernetes.io/version: "1.0"
